--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/10/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,27 +50,27 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">59.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">59.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">59.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.9&#176;F</td>
+        <td class="data">46.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">62%</td>
+        <td class="data">61%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.893 inHg (0.012)</td>
+        <td class="data">29.892 inHg (0.012)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.7&#176;F</td>
+        <td class="data">75.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:40:21 AM</td>
+          <td class="data">06:41:06 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:20:28 PM</td>
+          <td class="data">07:19:01 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,10 +153,10 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:20:38 PM">
-            79.9</span><br/>
-          <span title="07:08:29 AM">
-            56.5</span>
+          <span title="12:00:01 AM">
+            59.9</span><br/>
+          <span title="12:03:36 AM">
+            59.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:20:38 PM" class="hival">
-            79.9</span>
+          <span title="12:00:01 AM" class="hival">
+            59.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="07:08:29 AM" class="loval">
-            56.5</span>
+          <span title="12:03:36 AM" class="loval">
+            59.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:08:29 AM (Wednesday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:29:40 PM">
-            58.4</span><br/>
-          <span title="04:29:48 PM">
-            43.4</span>
+          <span title="12:00:01 AM">
+            47.3</span><br/>
+          <span title="12:03:36 AM">
+            46.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -269,10 +269,10 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="07:23:09 AM">
-            85</span><br/>
-          <span title="04:23:50 PM">
-            28</span>
+          <span title="12:00:01 AM">
+            63</span><br/>
+          <span title="12:02:32 AM">
+            61</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:23:09 AM (Wednesday)">
@@ -303,10 +303,10 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="11:19:03 PM">
-            29.899</span><br/>
-          <span title="12:01:01 AM">
-            29.700</span>
+          <span title="12:00:06 AM">
+            29.895</span><br/>
+          <span title="12:01:00 AM">
+            29.890</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="03:36:26 PM">
-            17</span><br/>
-          181
+          <span title="12:00:01 AM">
+            0</span><br/>
+             N/A
         </td>
         <td class="data new_row hilo_week">
           <span title="03:36:26 PM (Wednesday)">
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          2</td>
+          0</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          4</td>
+          0</td>
         <td class="data new_row hilo_week">
           3</td>
         <td class="data new_row hilo_month">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          2<br/>
-          205
+          0<br/>
+             N/A
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -470,10 +470,10 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:03:02 PM">
-            79.4</span><br/>
-          <span title="08:05:01 AM">
-            71.9</span>
+          <span title="12:01:00 AM">
+            75.8</span><br/>
+          <span title="12:00:01 AM">
+            75.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -505,10 +505,10 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="07:57:01 AM">
-            49</span><br/>
-          <span title="04:29:02 PM">
-            38</span>
+          <span title="12:00:01 AM">
+            40</span><br/>
+          <span title="12:00:01 AM">
+            40</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:57:01 AM (Wednesday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 9 hours, 12 minutes</td>
+      <td class="data">8 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 9 hours, 12 minutes</td>
+      <td class="data">8 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
