--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/10/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,10 +84,10 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">79.9<br/>
-            <span class="timestamp">04:20:38 PM</span><br/>
-            56.5<br/>
-            <span class="timestamp">07:08:29 AM</span>
+          <td class="data new_row">59.9<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            59.7<br/>
+            <span class="timestamp">12:03:36 AM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span><br/>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">79.9<br/>
-            <span class="timestamp">04:20:38 PM</span>
+          <td class="data new_row">59.9<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">117.5<br/>
             <span class="timestamp">04:04:42 PM (Sunday)</span>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">56.5<br/>
-            <span class="timestamp">07:08:29 AM</span>
+          <td class="data new_row">59.7<br/>
+            <span class="timestamp">12:03:36 AM</span>
           </td>
           <td class="data new_row">56.5<br/>
             <span class="timestamp">07:08:29 AM (Wednesday)</span>
@@ -151,10 +151,10 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">58.4<br/>
-            <span class="timestamp">12:29:40 PM</span><br/>
-            43.4<br/>
-            <span class="timestamp">04:29:48 PM</span>
+          <td class="data new_row">47.3<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            46.2<br/>
+            <span class="timestamp">12:03:36 AM</span>
           </td>
           <td class="data new_row">58.4<br/>
             <span class="timestamp">11:23:38 AM (Monday)</span><br/>
@@ -180,10 +180,10 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">85<br/>
-            <span class="timestamp">07:23:09 AM</span><br/>
-            28<br/>
-            <span class="timestamp">04:23:50 PM</span>
+          <td class="data new_row">63<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            61<br/>
+            <span class="timestamp">12:02:32 AM</span>
           </td>
           <td class="data new_row">85<br/>
             <span class="timestamp">07:23:09 AM (Wednesday)</span><br/>
@@ -209,10 +209,10 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.899<br/>
-            <span class="timestamp">11:19:03 PM</span><br/>
-            29.700<br/>
-            <span class="timestamp">12:01:01 AM</span>
+          <td class="data new_row">29.895<br/>
+            <span class="timestamp">12:00:06 AM</span><br/>
+            29.890<br/>
+            <span class="timestamp">12:01:00 AM</span>
           </td>
           <td class="data new_row">29.954<br/>
             <span class="timestamp">09:59:02 AM (Sunday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            17<br/>
-            181<br/>
-            <span class="timestamp">03:36:26 PM</span>
+            0<br/>
+               N/A<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             17<br/>
@@ -304,7 +304,7 @@
           <td class="label">Wind Average</td>
           <td class="units"> mph</td>
           <td class="data new_row">
-            2</td>
+            0</td>
           <td class="data new_row">
             2</td>
           <td class="data new_row">
@@ -317,7 +317,7 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">4</td>
+          <td class="data new_row">0</td>
           <td class="data new_row">3</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
@@ -334,8 +334,8 @@
             &#176;
           </td>
           <td class="data new_row">
-            2<br/>
-            205
+            0<br/>
+               N/A
           </td>
           <td class="data new_row">
             0<br/>
@@ -361,10 +361,10 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            79.4<br/>
-            <span class="timestamp">04:03:02 PM</span><br/>
-            71.9<br/>
-            <span class="timestamp">08:05:01 AM</span>
+            75.8<br/>
+            <span class="timestamp">12:01:00 AM</span><br/>
+            75.7<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             91.8<br/>
@@ -396,10 +396,10 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            49<br/>
-            <span class="timestamp">07:57:01 AM</span><br/>
-            38<br/>
-            <span class="timestamp">04:29:02 PM</span>
+            40<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            40<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             49<br/>
