--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 12:34:00 AM</p>
+    <p class="lastupdate">09/10/2020 12:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">59.5&#176;F</td>
+        <td class="data">59.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">59.5&#176;F</td>
+        <td class="data">59.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">59.5&#176;F</td>
+        <td class="data">59.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.9&#176;F</td>
+        <td class="data">46.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">63%</td>
+        <td class="data">62%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.897 inHg (0.018)</td>
+        <td class="data">29.895 inHg (0.010)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSE (158&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             59.9</span><br/>
-          <span title="12:08:22 AM">
-            59.5</span>
+          <span title="12:38:36 AM">
+            59.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:08:22 AM" class="loval">
-            59.5</span>
+          <span title="12:38:36 AM" class="loval">
+            59.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:08:29 AM (Wednesday)" class="loval">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 9 hours, 47 minutes</td>
+      <td class="data">8 days, 9 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 9 hours, 47 minutes</td>
+      <td class="data">8 days, 9 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
