--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 12:54:00 AM</p>
+    <p class="lastupdate">09/10/2020 12:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">58.6&#176;F</td>
+        <td class="data">58.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">58.6&#176;F</td>
+        <td class="data">58.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">58.6&#176;F</td>
+        <td class="data">58.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.0&#176;F</td>
+        <td class="data">46.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">63%</td>
+        <td class="data">64%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.897 inHg (0.014)</td>
+        <td class="data">29.897 inHg (0.018)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             59.9</span><br/>
-          <span title="12:53:39 AM">
-            58.6</span>
+          <span title="12:56:13 AM">
+            58.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:53:39 AM" class="loval">
-            58.6</span>
+          <span title="12:56:13 AM" class="loval">
+            58.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:08:29 AM (Wednesday)" class="loval">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:07:46 AM">
-            1</span><br/>
-          196
+          <span title="12:57:43 AM">
+            2</span><br/>
+          157
         </td>
         <td class="data new_row hilo_week">
           <span title="03:36:26 PM (Wednesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          180
+          168
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 10 hours, 7 minutes</td>
+      <td class="data">8 days, 10 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 10 hours, 7 minutes</td>
+      <td class="data">8 days, 10 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
