--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 01:04:00 AM</p>
+    <p class="lastupdate">09/10/2020 01:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">58.3&#176;F</td>
+        <td class="data">58.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">58.3&#176;F</td>
+        <td class="data">58.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">58.3&#176;F</td>
+        <td class="data">58.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.4&#176;F</td>
+        <td class="data">47.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">67%</td>
+        <td class="data">68%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.897 inHg (0.017)</td>
+        <td class="data">29.898 inHg (0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSE (158&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             59.9</span><br/>
-          <span title="01:02:01 AM">
-            58.3</span>
+          <span title="01:04:45 AM">
+            58.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:02:01 AM" class="loval">
-            58.3</span>
+          <span title="01:04:45 AM" class="loval">
+            58.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:08:29 AM (Wednesday)" class="loval">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:15:20 AM">
-            47.8</span><br/>
+          <span title="01:06:35 AM">
+            48.2</span><br/>
           <span title="12:06:48 AM">
             45.7</span>
         </td>
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="01:03:11 AM">
-            67</span><br/>
+          <span title="01:06:35 AM">
+            69</span><br/>
           <span title="12:06:48 AM">
             60</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          163
+          162
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 10 hours, 17 minutes</td>
+      <td class="data">8 days, 10 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 10 hours, 17 minutes</td>
+      <td class="data">8 days, 10 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
