--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 01:14:00 AM</p>
+    <p class="lastupdate">09/10/2020 01:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">58.1&#176;F</td>
+        <td class="data">57.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">58.1&#176;F</td>
+        <td class="data">57.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">58.1&#176;F</td>
+        <td class="data">57.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.6&#176;F</td>
+        <td class="data">47.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.901 inHg (0.018)</td>
+        <td class="data">29.904 inHg (0.020)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSE (158&#176;)</td>
+        <td class="data">1 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             59.9</span><br/>
-          <span title="01:11:25 AM">
-            58.1</span>
+          <span title="01:18:25 AM">
+            57.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:11:25 AM" class="loval">
-            58.1</span>
+          <span title="01:18:25 AM" class="loval">
+            57.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:08:29 AM (Wednesday)" class="loval">
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="12:47:01 AM">
-            29.902</span><br/>
+          <span title="01:16:01 AM">
+            29.905</span><br/>
           <span title="12:01:00 AM">
             29.890</span>
         </td>
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:57:43 AM">
-            2</span><br/>
-          157
+          <span title="01:17:45 AM">
+            3</span><br/>
+          186
         </td>
         <td class="data new_row hilo_week">
           <span title="03:36:26 PM (Wednesday)">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          0</td>
+          1</td>
         <td class="data new_row hilo_week">
           3</td>
         <td class="data new_row hilo_month">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          160
+          166
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 10 hours, 27 minutes</td>
+      <td class="data">8 days, 10 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 10 hours, 27 minutes</td>
+      <td class="data">8 days, 10 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
